tests/data/placebo/test_security_group_stale/ec2.AcceptVpcPeeringConnection_1.json
{
  "status_code": 200,
  "data": {
    "VpcPeeringConnection": {
      "Status": {
        "Message": "Provisioning",
        "Code": "provisioning"
      },
      "Tags": [],
      "AccepterVpcInfo": {
        "PeeringOptions": {
          "AllowEgressFromLocalVpcToRemoteClassicLink": false,
          "AllowDnsResolutionFromRemoteVpc": false,
          "AllowEgressFromLocalClassicLinkToRemoteVpc": false
        },
        "OwnerId": "644160558196",
        "VpcId": "vpc-b9c27ac0",
        "CidrBlock": "10.5.0.0/16"
      },
      "VpcPeeringConnectionId": "pcx-0a5e2a63",
      "RequesterVpcInfo": {
        "PeeringOptions": {
          "AllowEgressFromLocalVpcToRemoteClassicLink": false,
          "AllowDnsResolutionFromRemoteVpc": false,
          "AllowEgressFromLocalClassicLinkToRemoteVpc": false
        },
        "OwnerId": "644160558196",
        "VpcId": "vpc-a7ce76de",
        "CidrBlock": "10.4.0.0/16"
      }
    },
    "ResponseMetadata": {}
  }
}
