tests/data/placebo/test_security_group_stale/ec2.AuthorizeSecurityGroupIngress_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "4e7a31b7-1d51-49ce-a94a-b572a76d8b51", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Sat, 26 Nov 2016 15:11:00 GMT"
            }
        }
    }
}
