tests/data/placebo/test_security_group_stale/ec2.CreateSecurityGroup_1.json
{
  "status_code": 200,
  "data": {
    "GroupId": "sg-dd8134ac",
    "ResponseMetadata": {}
  }
}
