tests/data/placebo/test_security_group_stale/ec2.CreateSecurityGroup_2.json
{
  "status_code": 200,
  "data": {
    "GroupId": "sg-e9843198",
    "ResponseMetadata": {}
  }
}
