tests/data/placebo/test_security_group_stale/ec2.CreateVpcPeeringConnection_1.json
{
  "status_code": 200,
  "data": {
    "VpcPeeringConnection": {
      "Status": {
        "Message": "Initiating Request to 644160558196",
        "Code": "initiating-request"
      },
      "Tags": [],
      "RequesterVpcInfo": {
        "PeeringOptions": {
          "AllowEgressFromLocalVpcToRemoteClassicLink": false,
          "AllowDnsResolutionFromRemoteVpc": false,
          "AllowEgressFromLocalClassicLinkToRemoteVpc": false
        },
        "OwnerId": "644160558196",
        "VpcId": "vpc-a7ce76de",
        "CidrBlock": "10.4.0.0/16"
      },
      "VpcPeeringConnectionId": "pcx-0a5e2a63",
      "ExpirationTime": {
        "hour": 15,
        "__class__": "datetime",
        "month": 7,
        "second": 53,
        "microsecond": 0,
        "year": 2017,
        "day": 4,
        "minute": 40
      },
      "AccepterVpcInfo": {
        "OwnerId": "644160558196",
        "VpcId": "vpc-b9c27ac0"
      }
    },
    "ResponseMetadata": {}
  }
}
