tests/data/placebo/test_security_group_stale/ec2.DeleteSecurityGroup_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "e235316d-8441-44f6-a8b3-0ddc5496f360", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 27 Jun 2017 15:40:54 GMT"
            }
        }
    }
}
