tests/data/placebo/test_security_group_stale/ec2.DeleteVpc_2.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "237da020-2e4c-484b-a918-cfc91eccbeac", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Sat, 26 Nov 2016 15:11:02 GMT"
            }
        }
    }
}
