tests/data/placebo/test_security_group_stale/ec2.DeleteVpcPeeringConnection_1.json
{
  "status_code": 200,
  "data": {
    "Return": true,
    "ResponseMetadata": {}
  }
}
