tests/data/placebo/test_security_group_stale/ec2.DescribeSecurityGroups_1.json
{
  "status_code": 200,
  "data": {
    "SecurityGroups": [
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "for apps",
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 60000,
            "IpRanges": [],
            "ToPort": 62000,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [
              {
                "VpcId": "vpc-b9c27ac0",
                "UserId": "644160558196",
                "GroupId": "sg-e9843198",
                "VpcPeeringConnectionId": "pcx-0a5e2a63",
                "PeeringStatus": "active"
              }
            ],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "web-tier",
        "VpcId": "vpc-a7ce76de",
        "OwnerId": "644160558196",
        "GroupId": "sg-dd8134ac"
      }
    ],
    "ResponseMetadata": {}
  }
}
