tests/data/placebo/test_security_group_stale/ec2.DescribeStaleSecurityGroups_1.json
{
  "status_code": 200,
  "data": {
    "StaleSecurityGroupSet": [
      {
        "VpcId": "vpc-a7ce76de",
        "StaleIpPermissionsEgress": [],
        "GroupName": "web-tier",
        "StaleIpPermissions": [
          {
            "ToPort": 62000,
            "FromPort": 60000,
            "UserIdGroupPairs": [
              {
                "VpcId": "vpc-b9c27ac0",
                "GroupId": "sg-e9843198",
                "VpcPeeringConnectionId": "pcx-0a5e2a63",
                "PeeringStatus": "active"
              }
            ],
            "IpProtocol": "tcp"
          }
        ],
        "GroupId": "sg-dd8134ac",
        "Description": "for apps"
      }
    ],
    "ResponseMetadata": {}
  }
}
