tests/data/placebo/test_security_group_stale/ec2.DescribeStaleSecurityGroups_2.json
{
    "status_code": 200, 
    "data": {
        "StaleSecurityGroupSet": [], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "837becd6-927c-4741-af5b-2b30190b7bb4", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 27 Jun 2017 15:40:55 GMT"
            }
        }
    }
}
