tests/data/placebo/test_security_group_stale/ec2.DescribeStaleSecurityGroups_3.json
{
    "status_code": 200, 
    "data": {
        "StaleSecurityGroupSet": [], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "dbfbe1e6-82f4-4464-ac51-25b6b95b718c", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 27 Jun 2017 15:40:55 GMT"
            }
        }
    }
}
