tests/data/placebo/test_security_group_stale/ec2.DescribeStaleSecurityGroups_4.json
{
    "status_code": 200, 
    "data": {
        "StaleSecurityGroupSet": [], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "d0bfb509-ec35-49ae-bc0e-8bddd5252a37", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 27 Jun 2017 15:40:55 GMT"
            }
        }
    }
}
